--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
             
         </div>
         <!-- Match Info-->
-        <div style="position: absolute;   top: 0; right: 0; bottom: 0; left: 0; align-items: center;justify-content: center; display: flex; color:   aquamarine;  ">
-        hello
-        </div>
+        <div id="match-info" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; align-items: center;justify-content: center; 
+        display: flex; color:   aquamarine;  "> game info </div>  <!-- display: none; to hide display: flex; to show-->
         <canvas></canvas>
 
     </div>
@@ -58,6 +57,8 @@
         <p>Value: <span id="demo"></span></p>
     </div>
 </body>
+
 <script src="game_classes.js"></script>
+<script src="game_setup.js"></script>
 <script src="index.js"></script>
 </html>
