--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <!-- PLayer Randomized Names -->
         <div style="position: absolute;display: grid;height: 50px;grid-template-columns: 50% 50%;width: 100%;">
             
-            <h2 id="player1-name" style="color: rgb(227, 24, 24); text-align: left; margin: 0; padding-left: 50px;;"> Player 1</h2>
-            <h2 id="player2-name" style="color: rgb(227, 24, 24); text-align: right; margin: 0; padding-right: 50px;"> Player 2</h2> 
+            <h2 id="player1-name" style="color: rgb(227, 24, 24); text-align: left; margin: 0; padding-left: 50px;;"> Player 1 : <span id="player1-points">1000</span></h2>
+            <h2 id="player2-name" style="color: rgb(227, 24, 24); text-align: right; margin: 0; padding-right: 50px;"> Player 2 : <span id="player2-points">1000</span></h2> 
             
         </div>
         <!-- Match Info-->
@@ -51,11 +51,12 @@
     </div>
     <!-- end entire game screen -->
 
-    <!-- testing health bars -->
+    <!-- testing health bars
     <div class="slidecontainer">
         <input type="range" min="0" max="100" value="100" class="slider" id="myRange">
         <p>Value: <span id="demo"></span></p>
     </div>
+     -->
 </body>
 
 <script src="game_classes.js"></script>
