--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <!-- Match Info-->
         <div id="match-info" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; align-items: center;justify-content: center; 
-        display: flex; color:   aquamarine;  "> game info </div>  <!-- display: none; to hide display: flex; to show-->
+        display: flex; color:   aquamarine;  "></div>  <!-- display: none; to hide display: flex; to show-->
         <canvas></canvas>
 
     </div>
